--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Basic NaCl Pepper 18 sample using C API and C compiler. Message passing for logs.
+hello_01_log: Basic NaCl Pepper 18 sample using C API and C compiler. Message passing for logs.
